--- a/inst/doc/SplicingGraphs.Rnw
+++ b/inst/doc/SplicingGraphs.Rnw
@@ -52,7 +52,7 @@ analyzes the data set in terms of differential alternative splicing.
 Although there exist several software solutions for RNA-Seq 
 based transcriptome analysis, like RSEM \cite{RSEM2011},
 Cufflinks \cite{Roberts21062011} or the R package \Rpackage{DEXSeq} 
-\cite{Anders:2010:GB}, the approach of analyzing splice events as
+\cite{Anders:2010:GB}, the approach of analyzing splicing events as
 complete complex structure is still new. 
 
 
@@ -63,9 +63,9 @@ process which modifies the primary RNA transcript and leads to
 transcript variants of genes. Those variants can often be plentiful. 
 Especially for large genes it is often difficult to describe their
 structure in a formal, logical, short and convenient way. To capture 
-the full variety of splice variants of a certain gene in one single 
+the full variety of splicing variants of a certain gene in one single 
 data structure Heber at al \cite{Heber01072002} introduced the term 
-splice graph and provided a formal frame work for representing
+splicing graph and provided a formal frame work for representing
 the different choices of the splicing machinery. 
 
 Splicing graphs in general are directed acyclic graphs (DAGs) and
@@ -75,21 +75,21 @@ transcripts and edges, connecting the vertices, represent the respective
 exonic and intronic structure. Wether the edge is representing an exon 
 or an intron is determined by the types of the two flanking vertices. 
 Vertices according \cite{Heber01072002} can be of type 
-acceptor splice site ($-$), donor splice site ($\wedge$), transcript start 
+acceptor splicing site ($-$), donor splicing site ($\wedge$), transcript start 
 site ($~[~$) or transcript end ($~]~$).  For the correctness of the splicing 
 graph framework artificial sites designated as root ($0$) and leaf ($1$) 
 attached to the start and the end of each graph are required. It is important 
 to note that root and leaf will never represent real observed sites at the 
-transcripts and act just as a common sources and sink of the splice graph. 
+transcripts and act just as a common sources and sink of the splicing graph. 
 The symbols associated with the individual types of vertices shown in braces 
-above are used for the identification of complete alternative splice events.
-For details about gathering the alternative splice events and their
-associated splice codes see \cite{Heber01072002} and 
+above are used for the identification of complete alternative splicing events.
+For details about gathering the alternative splicing events and their
+associated splicing codes see \cite{Heber01072002} and 
 \cite{Sammeth:2009:GB}.
 
-Figure \ref{img:SplicingGraphs} shows the splice graph representation
+Figure \ref{img:SplicingGraphs} shows the splicing graph representation
 of all known transcript variants of gene JUNB (ENTREZ gene ID 3726).
-Before the splice graph is constructed the exons of the individual genes
+Before the splicing graph is constructed the exons of the individual genes
 respectively transcripts get disjoined to avoid overlapping sequence parts.
 The green dashed lines in Figure \ref{img:SplicingGraphs}  represent
 genomic locations where exons start, end or get disjoined during the 
@@ -135,9 +135,9 @@ the second exon part (${-}{:}$). See also Figure \ref{img:SplicingGraphs}.
 
 In many cases one vertex can represent two different types of sites, but
 the combinations of types for such vertices is limited. 
-Only splice site acceptors ($-$) and transcript start sites ($~[~$) or splice site
-donors ($\wedge$) and transcript ends ($~]~$) can occur as a pair of
-site types.
+Only splicing site acceptors ($-$) and transcript start sites ($~[~$) or
+splicing site donors ($\wedge$) and transcript ends ($~]~$) can occur as
+a pair of site types.
 Such a two type vertex occurs when the start of an exon, which is not
 the first exon of a transcript falls together with the
 transcription start site of another transcript of the same gene.
@@ -146,11 +146,12 @@ exon of a transcript falls together with the transcript
 end of another transcript isoform belonging to the same gene. 
 As mentioned above the edges can either represent introns or exons
 depending on the types of the flanking vertices.
-An edge between a splice site acceptor ($-$) and a splice site donor ($\wedge$) vertex
-for example would represent an exon whereas the edge between an
-splice site donor ($\wedge$) and an splice site acceptor ($-$) would represent an intron.
-Exons are also described between transcription start sites ($~[~$) and splice
-site donors ($\wedge$) or splice site acceptors ($-$) and transcript
+An edge between a splicing site acceptor ($-$) and a splice site donor
+($\wedge$) vertex for example would represent an exon whereas the edge
+between a splicing site donor ($\wedge$) and an splicing site acceptor ($-$)
+would represent an intron.
+Exons are also described between transcription start sites ($~[~$) and splicing
+site donors ($\wedge$) or splicing site acceptors ($-$) and transcript
 ends ($~]~$). The edges between the root vertex ($0$) and the transcription start
 sites ($~[~$) as well as the edges between the transcript 
 ends ($~]~$) and the leaf ($1$) contain neither an
@@ -161,20 +162,20 @@ sequence information at all.
 \subsection{Alternative splicing events form bubbles in the
   splicing graph}
 
-Not all splice sites (vertices) on the individual transcripts are alternative 
-splice sites. Therefore the initial splicing graph outlined above can be simplified 
-by collapsing vertices of in- and out- degree equal to one because they
-are supposed to be non-informative in terms of alternative splicing.
+Not all splicing sites (vertices) on the individual transcripts are alternative 
+splicing sites. Therefore the initial splicing graph outlined above can be
+simplified by collapsing vertices of in- and out- degree equal to one because
+they are supposed to be non-informative in terms of alternative splicing.
 Edges associated with such vertices get also sequentially collapsed with
 the previous ones and result in longer edges capturing several exons.
 The final splicing graph only contains vertices involved in alternative
-splicing. Between two remaining vertices there exist at
-least two edges which form a bubble. Such a bubble, representing an alternative
-splice event, consists at least of two bubble parts. The exonic structures of the 
-two bubble parts are exclusive.
+splicing. Between two remaining vertices there exists at
+least two edges which form a bubble. Such a bubble, representing an
+alternative splicing event, consists at least of two bubble parts. The exonic
+structures of the two bubble parts are exclusive.
 Bubbles in general can be nested or can intersect with other bubbles.
-The collapsed edges of the final splicing graph associated with one or more exons 
-which do not overlap each other, form larger sequence regions providing 
+The collapsed edges of the final splicing graph associated with one or more
+exons which do not overlap each other, form larger sequence regions providing 
 advantages in counting reads and testing for differential expression. 
 
 
@@ -195,7 +196,7 @@ The first part of the code ($1~0~0$) indicates that the first edge
 contains no exon at all. The first symbol of this code part
 indicates the edge number, the second symbol the vertex rank within 
 the bubble and the third symbol the vertex type. The second part of 
-the splice code ($2~1 - 2~2~\wedge$) represents edge number 2 
+the splicing code ($2~1 - 2~2~\wedge$) represents edge number 2 
 containing exactly one exon described by the flanking vertices
 $-$ and $\wedge$. 
 
@@ -205,17 +206,17 @@ $-$ and $\wedge$.
   \begin{center}
   \includegraphics[width=\textwidth]{exskip.png}
   \end{center}
-  \caption{Splice graph representation of an 1 exon skip leading to
-    one bubble. The associated splice code is 
-    $1~0~0~2~1 - 2~2~\wedge$. Left: splice graph
+  \caption{Splicing graph representation of an 1 exon skip leading to
+    one bubble. The associated splicing code is 
+    $1~0~0~2~1 - 2~2~\wedge$. Left: splicing graph
     representation. Right: transcript representation
   }
   \label{img:exskip}
 \end{figure}
 
 Another example where disjoining comes into play is a
-an alternative splice site acceptor in one of two transcripts.
-The code for an alternative splice site acceptor would be 
+an alternative splicing site acceptor in one of two transcripts.
+The code for an alternative splicing site acceptor would be 
 $1~0~0~2~1 - 2~2~{\wedge}{:}$ and can be seen as an exon 
 skip where the end of the exon is linked to a disjoint site. 
 In such a way it is possible to characterize and to
@@ -227,9 +228,10 @@ See Figure \ref{img:altaccept}
   \begin{center}
   \includegraphics[width=\textwidth]{altaccept.png}
   \end{center}
-  \caption{Splice graph representation of an alternative acceptor site
-    leading to one bubble. The associated splice code is $1~0~0~2~1 - 2~2~{\wedge}{:}$. 
-    Left: splice graph representation. Right: transcript representation
+  \caption{Splicing graph representation of an alternative acceptor site
+    leading to one bubble. The associated splicing code is
+    $1~0~0~2~1 - 2~2~{\wedge}{:}$. 
+    Left: splicing graph representation. Right: transcript representation
   }
   \label{img:altaccept}
 \end{figure}
@@ -241,7 +243,7 @@ As outlined in the previous section the splicing graph approach
 extends the differential expression analysis of single exons
 implemented by in \Rpackage{DEXSeq} towards
 the analysis of a priori known alternative splicing events.
-The starting point for creating a splice graph is a
+The starting point for creating a splicing graph is a
 \Rclass{TranscriptDb} object containing all required gene 
 and transcript annotation of a certain reference genome.
 Here the \Rpackage{TxDb.Mmusculus.UCSC.mm9.knownGenee} 
@@ -324,7 +326,7 @@ sG
 \end{scriptsize}
 
 In the code chunk below we access the information about the type of
-splice events and try to quantify them later on.
+splicing events and try to quantify them later on.
 
 \begin{scriptsize}
 <<spliceevents>>=
@@ -332,18 +334,19 @@ metadata(sG)$spliceEvents[8,]
 @ 
 \end{scriptsize}
 
-The types of alternative splice events are provided as a \Rclass{DataFrame}
+The types of alternative splicing events are provided as a \Rclass{DataFrame}
 object. The first column provides the so-called bubble code. The
-bubble code assigns an unique identifier to the individual splice events
+bubble code assigns an unique identifier to the individual splicing events
 (bubbles) and consists basically of an bubble ID concatenated with the
 ENTREZ gene ID. The second column provides
-\Rclass{CompressedCharacterList}s representing the splice codes.
+\Rclass{CompressedCharacterList}s representing the splicing codes.
 To explore the meaning of the code symbols go back to Section \ref{sec:spliceCodes}.
-The last three columns provide the name of the splice event, the
+The last three columns provide the name of the splicing event, the
 corresponding ENTREZ gene ID and the bubble ID unique within each gene.
 
-Back to quantifying the observed splice events in the 
-annotation. Now we are interested which types of splice events occur most often.
+Back to quantifying the observed splicing events in the 
+annotation. Now we are interested which types of splicing events occur most
+often.
 
 <<bubbles>>=
 spliceEvents <- metadata(sG)$spliceEvents
@@ -361,8 +364,8 @@ complex events.
 head(eventSum)
 @ 
 
-The most often occurring splice event on chromosome 19 is named skip
-one exon. At this point it should be mentioned that not all splice
+The most often occurring splicing event on chromosome 19 is named skip
+one exon. At this point it should be mentioned that not all splicing
 events have names since there are a variety of different events. How many
 different events do we actually observe at chromosome 19? Lets check this.
 
@@ -377,8 +380,8 @@ We observe \Sexpr{nrOfdiffEvents} different events only on
 chromosome 19. So everybody can imagine that we have not given to all
 those events names. So don't be surprised if some NAs show up.
 
-Another interesting information which we can gain from the splice
-graph is how many splice events does each individual gene have.
+Another interesting information which we can gain from the splicing
+graph is how many splicing events does each individual gene have.
 To address this issue we have to count the number of bubbles within
 each gene.
 
@@ -389,14 +392,15 @@ nrOfBubs <- elementLengths(split(spliceEvents$bubbleCode[idx],
 nrOfBubs <- nrOfBubs[order(nrOfBubs,decreasing=TRUE)]
 @ 
 
-Below the genes with the most observed splice events are shown.
+Below the genes with the most observed splicing events are shown.
 
 <<genesWithMostObservedSpliceEvents>>=
 head(nrOfBubs)
 @ 
 
-Next we want to see which genes show the highest heterogeneity of splice events.
-We check for the number of unique splice events for each gene.
+Next we want to see which genes show the highest heterogeneity of splicing
+events.
+We check for the number of unique splicing events for each gene.
 
 <<genesWithHighestSpliceEventHeterogeneity>>=
 uniEventsPerGn <- lapply(split(allEvents, spliceEvents$gn), 
@@ -406,7 +410,7 @@ nrOfUniEvents <- nrOfUniEvents[order(nrOfUniEvents,
                                      decreasing=TRUE)]
 @ 
 
-Below the genes with the highest heterogeneity in observed splice events
+Below the genes with the highest heterogeneity in observed splicing events
 are shown
 
 <<showGenesWithHighestSpliceEventHeterogeneity>>=
@@ -455,7 +459,7 @@ in terms of RNA-Seq and transcriptome analysis.
 
 This section deals with counting the reads associated with the
 individual edges. To elucidate later in this vignette some
-advantages of the splice graph approach the reads for the 
+advantages of the splicing graph approach the reads for the 
 exon model get also counted. As a starting point for counting the 
 aligned reads are required. The aligned reads used in this example 
 are stored as BAM files. The BAM files used for counting reads are
@@ -527,20 +531,20 @@ design$condition <-
 @ 
 
 
-\section{Significant altered alternative splice events}
+\section{Significant altered alternative splicing events}
 
-This section deals with testing for significant altered splice events.
+This section deals with testing for significant altered splicing events.
 We introduced a generalized linear model (GLM) to asses the
-significance of changes in the alternative splice events between
+significance of changes in the alternative splicing events between
 treated and untreated cells. The utilized GLM is a modified
 version of the GLM employed in the \Rpackage{DEXSeq} package.
 To get from the \Rpackage{DEXSeq} model to the model usable for
 testing alternative splicing events, represented by bubbles in the
-splice graph, exon terms are replaced by the bubble part terms. 
+splicing graph, exon terms are replaced by the bubble part terms. 
 Depending on the number of out edges at the source of the bubble
 and the number of in edges at the sink of a bubble the bubble can be
 divided into two or more bubble parts.
-A bubble part in the simplest case consist of only one splice graph edge.
+A bubble part in the simplest case consist of only one splicing graph edge.
 This means if we would have a bubble with only two edges, we would
 also have two bubble parts which have to be incorporated into our model. 
 See Equation \ref{eq:fullModel}. 
@@ -629,12 +633,12 @@ sglBpCntSet(spliceGraphCnts)
 @ 
 
 We found \Sexpr{sum(res.bubbles$padj < 0.05, na.rm=TRUE)} 
-alternative splice events to be significantly (p $<$ 0.05) altered.
+alternative splicing events to be significantly (p $<$ 0.05) altered.
 
 <<printSigSpliceEvents, results=tex, echo=FALSE>>=
 library(xtable)
 T <- xtable(head(res.bubbles, n=10),
-             caption=paste("Top 10 most significant altered alternative splice events"))
+             caption=paste("Top 10 most significant altered alternative splicing events"))
 align(T) <- "rrrrrrlp{3cm}"
 print(T, table.placement="H", size="scriptsize", 
       include.rownames=FALSE)
